--- a/css/sass/includes/_fonts.scss
+++ b/css/sass/includes/_fonts.scss
@@ -3,57 +3,67 @@ CSS Font File for Wordpress Theme FAU
 */
 
 @font-face {
-    font-family: 'roboto';
-    src: url('../fonts/roboto/Roboto-Bold-webfont.eot');
-    src: url('../fonts/roboto/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/roboto/Roboto-Bold-webfont.woff') format('woff'),
-         url('../fonts/roboto/Roboto-Bold-webfont.ttf') format('truetype'),
-         url('../fonts/roboto/Roboto-Bold-webfont.svg#robotobold') format('svg');
+    font-family: 'opensans';
+    src: url('../fonts/opensans/OpenSans-Bold-webfont.eot');
+    src: url('../fonts/opensans/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans/OpenSans-Bold-webfont.woff') format('woff'),
+         url('../fonts/opensans/OpenSans-Bold-webfont.ttf') format('truetype'),
+         url('../fonts/opensans/OpenSans-Bold-webfont.svg#opensansbold') format('svg');
     font-weight: bold;
     font-style: normal;
 }	
 
 @font-face {
-    font-family: 'roboto';
-    src: url('../fonts/roboto/Roboto-BoldItalic-webfont.eot');
-    src: url('../fonts/roboto/Roboto-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/roboto/Roboto-BoldItalic-webfont.woff') format('woff'),
-         url('../fonts/roboto/Roboto-BoldItalic-webfont.ttf') format('truetype'),
-         url('../fonts/roboto/Roboto-BoldItalic-webfont.svg#robotobold_italic') format('svg');
+    font-family: 'opensans';
+    src: url('../fonts/opensans/OpenSans-BoldItalic-webfont.eot');
+    src: url('../fonts/opensans/OpenSans-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans/OpenSans-BoldItalic-webfont.woff') format('woff'),
+         url('../fonts/opensans/OpenSans-BoldItalic-webfont.ttf') format('truetype'),
+         url('../fonts/opensans/OpenSans-BoldItalic-webfont.svg#opensansbold_italic') format('svg');
     font-weight: bold;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'roboto';
-    src: url('../fonts/roboto/Roboto-Italic-webfont.eot');
-    src: url('../fonts/roboto/Roboto-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/roboto/Roboto-Italic-webfont.woff') format('woff'),
-         url('../fonts/roboto/Roboto-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/roboto/Roboto-Italic-webfont.svg#robotoitalic') format('svg');
+    font-family: 'opensans';
+    src: url('../fonts/opensans/OpenSans-Italic-webfont.eot');
+    src: url('../fonts/opensans/OpenSans-Italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans/OpenSans-Italic-webfont.woff') format('woff'),
+         url('../fonts/opensans/OpenSans-Italic-webfont.ttf') format('truetype'),
+         url('../fonts/opensans/OpenSans-Italic-webfont.svg#opensansitalic') format('svg');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'roboto';
-    src: url('../fonts/roboto/Roboto-Regular-webfont.eot');
-    src: url('../fonts/roboto/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/roboto/Roboto-Regular-webfont.woff') format('woff'),
-         url('../fonts/roboto/Roboto-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/roboto/Roboto-Regular-webfont.svg#robotoregular') format('svg');
+    font-family: 'opensans';
+    src: url('../fonts/opensans/OpenSans-Regular-webfont.eot');
+    src: url('../fonts/opensans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans/OpenSans-Regular-webfont.woff') format('woff'),
+         url('../fonts/opensans/OpenSans-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/opensans/OpenSans-Regular-webfont.svg#opensansregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'roboto-light';
-    src: url('../fonts/roboto/Roboto-Light-webfont.eot');
-    src: url('../fonts/roboto/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/roboto/Roboto-Light-webfont.woff') format('woff'),
-         url('../fonts/roboto/Roboto-Light-webfont.ttf') format('truetype'),
-         url('../fonts/roboto/Roboto-Light-webfont.svg#robotolight') format('svg');
+    font-family: 'opensans-light';
+    src: url('../fonts/opensans/OpenSans-Light-webfont.eot');
+    src: url('../fonts/opensans/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans/OpenSans-Light-webfont.woff') format('woff'),
+         url('../fonts/opensans/OpenSans-Light-webfont.ttf') format('truetype'),
+         url('../fonts/opensans/OpenSans-Light-webfont.svg#opensanslight') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'opensans-light';
+    src: url('../fonts/opensans/OpenSans-LightItalic-webfont.eot');
+    src: url('../fonts/opensans/OpenSans-LightItalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans/OpenSans-LightItalic-webfont.woff') format('woff'),
+         url('../fonts/opensans/OpenSans-LightItalic-webfont.ttf') format('truetype'),
+         url('../fonts/opensans/OpenSans-LightItalic-webfont.svg#opensanslight') format('svg');
+    font-weight: normal;
+    font-style: italic;
+}
