--- a/css/sass/_responsive-menu.scss
+++ b/css/sass/_responsive-menu.scss
@@ -8,22 +8,27 @@ Responsive Menue for FAU Theme
 
 /* Mobile Navigation Toggle Button */
 #nav-toggle {
-	position: absolute;
+	//position: absolute;
 	top: 45px;
 	right: 15px;
-	width: 25px;
+	//width: 25px;
+        width: 32px;
+        height: 32px;
+        background: $colorMeta;
 	
 	div {
-		height: 3px;
-		background: $colorMeta;
+		position: absolute;
+                height: 3px;
+		color: $colorText;
 		margin-bottom: 3px;
+                width: 25px;
 	}
 }
 
 @media (min-width: $breakMD +1) {
     #nav {
-	overflow: hidden;
-	max-height: 37px;
+	//overflow: hidden;
+	//max-height: 37px;
     }
 }
 @media (max-width: $breakMD) {
