--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -11,12 +11,18 @@ $breakMD:   767px;
 $breakLG:   979px;
 
 // Define fonts
-$fontStack: 'roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
+//$fontStack: 'roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$fontStack: 'opensans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$fontStackLight: 'opensans-light', "Arial Narrow", sans-serif;
 $fontStackSerifs: Georgia, serif;
 
+$fontTextSize: 16px;
+
 // Define text colors
-$colorText:		#444;
+$colorText:		#fff;
 $colorTextLight:	#797676;
+//$colorText:		#444;
+//$colorTextLight:	#797676;
 
 // Define notice colors
 $colorNotice: 		#a71c18;
@@ -28,7 +34,8 @@ $colorRwFak:	    #8d1429;
 $colorMedFak:	    #0381A2;
 $colorNatFak:	    #048767;
 $colorTechFak:	    #6E7881;
-$colorZUV:	    #003366;
+//$colorZUV:	    #003366;
+$colorZUV:	    #8F87C1;
 $colorDefault:	    #003366;
 
 $colorStandardHellgrau:	    #e9edf2;  
@@ -89,47 +96,57 @@ $colorPrimaryHero:	    $colorPrimary;
     $PalettonDunkelste:	#3b4956;
     $siegelurl: '../img/siegel-techfak.png';   
  } @else if $farbfamilie == 'zuv' {
-    $colorPrimary: $colorZUV;
+    $colorPrimary:      $colorZUV;
     $PalettonHellste:	#dde5f0;
-    $PalettonHeller:	#8fb1ef;
-    $PalettonDunkler:	#24598f;
-    $PalettonDunkelste:	#1f4c7a;
-    $siegelurl: '../img/siegel-zuv.png';     
+    $PalettonHeller:    #CDCAE6;
+    //$PalettonHeller:	#8fb1ef;
+    //$PalettonDunkler:	#24598f;
+    $PalettonDunkler:   #6152A3;
+    $PalettonDunkelste:	desaturate(lighten($colorPrimary, 10%), 90%);
+    $siegelurl: '../img/tk_logo.png';     
  }
     
 
-$colorHover:		    $PalettonDunkelste;
+$colorHover:		    $PalettonHeller;
+//$colorHover:		    $PalettonDunkelste;
 $colorLight:		    $PalettonHeller;
 $colorLightContrast:	    #fff;
-$colorLightest:		    $PalettonHellste;
+$colorLightest:		    #fff;
 $colorLightestContrast:	    $PalettonDunkelste;
-$colorPrimaryHero:	    $colorPrimary;
-$colorPrimaryHeroLight:	    lighten($colorPrimary, 15%); 
+//$colorPrimaryHero:	    #6152A3;
+//$colorPrimaryHero:	    $colorPrimary;
+$colorPrimaryHeroLight:     $colorPrimaryHero;
+//$colorPrimaryHeroLight:	    lighten($colorPrimary, 15%); 
 
 
 $colorSubNavCurrent:		#fff;
 $colorSubNavCurrentBackground:  $PalettonDunkler;
 $colorSubNavCurrentHover:	#fff;
-$colorSubNavCurrentHoverBackground: $colorHover;
-$colorSubNav:			$PalettonDunkelste;
-$colorSubNavBackground:		$colorLightest;
+$colorSubNavCurrentHoverBackground: $PalettonHeller;
+$colorSubNav:                   $PalettonDunkler;
+//$colorSubNav:			$PalettonDunkelste;
+$colorSubNavBackground:		$PalettonHeller;
+//$colorSubNavBackground:       $colorLightest;
 $colorSubNavBackgroundHover:	$PalettonDunkler; // darken($colorSubNavBackground, 5%);
-$colorMainMenu:			#fff;
+//$colorMainMenu:		#fff;
+$colorMainMenu:			$PalettonDunkler;
+$colorMainCurrent:              #fff;
 
 
 $colorButton:			$PalettonDunkelste;
 $colorButtonBackground:		$colorLightest;
 $colorButtonBackgroundHover:	darken($colorButtonBackground, 5%);
 
-$colorSearchPlaceholder:        #111;
+$colorSearchPlaceholder:        $PalettonDunkler;
 $colorSearchInput:		#000;
-$colorSearchInputBackground:	$colorLightest;
+$colorSearchInputBackground:	$PalettonDunkler;
 $colorSearchInputBackgroundFocus:  #fff;
 
 // Meta Menu
-$colorMeta:			$colorDefault;
+$colorMeta:			#8b81bd;
 // Define Background-Color for Meta Menu at top
-$colorMetaBackground:		$colorStandardHellgrau;
+//$colorMetaBackground:		$colorStandardHellgrau;
+$colorMetaBackground:		#fff;
 $colorMetaFAUHomeBackground:	desaturate(darken($colorStandardHellgrau, 10%), 90%); // #d0d3d8;
 $colorMetaHover:		desaturate(lighten($colorDefault, 10%), 40%);
 $colorMetaLight:		desaturate(lighten($colorDefault, 69%), 75%);
@@ -145,3 +162,182 @@ $colorSocialBackground:		$colorMetaBackground;
 // CopyrightInfos auf Slider und Banner
 $colorCopyright:	     #ddd;
 $colorCopyrightBackground:  rgba(0,0,0,0.4);
+
+
+//== Colors
+//
+//## Gray and brand colors for use across Bootstrap.
+
+$gray-base:              #000 !default;
+$gray-darker:            lighten($gray-base, 13.5%) !default; // #222
+$gray-dark:              lighten($gray-base, 20%) !default;   // #333
+$gray:                   lighten($gray-base, 33.5%) !default; // #555
+$gray-light:             lighten($gray-base, 46.7%) !default; // #777
+$gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
+
+$brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
+$brand-success:         #5cb85c !default;
+$brand-info:            #5bc0de !default;
+$brand-warning:         #f0ad4e !default;
+$brand-danger:          #d9534f !default;
+
+//== Components
+//
+//## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
+
+$padding-base-vertical:     6px !default;
+$padding-base-horizontal:   12px !default;
+
+$padding-large-vertical:    10px !default;
+$padding-large-horizontal:  16px !default;
+
+$padding-small-vertical:    5px !default;
+$padding-small-horizontal:  10px !default;
+
+$padding-xs-vertical:       1px !default;
+$padding-xs-horizontal:     5px !default;
+
+$line-height-large:         1.3333333 !default; // extra decimals for Win 8.1 Chrome
+$line-height-small:         1.5 !default;
+
+$border-radius-base:        4px !default;
+$border-radius-large:       6px !default;
+$border-radius-small:       3px !default;
+
+//** Global color for active items (e.g., navs or dropdowns).
+$component-active-color:    #fff !default;
+//** Global background color for active items (e.g., navs or dropdowns).
+$component-active-bg:       $brand-primary !default;
+
+//** Width of the `border` for generating carets that indicate dropdowns.
+$caret-width-base:          4px !default;
+//** Carets increase slightly in size for larger components.
+$caret-width-large:         5px !default;
+
+//== Buttons
+//
+//## For each of Bootstrap's buttons, define text, background and border color.
+
+$btn-font-weight:                normal !default;
+
+//$btn-default-color:              #333 !default;
+$btn-default-color:              #fff !default;
+$btn-default-bg:                 #fff !default;
+$btn-default-border:             #ccc !default;
+
+$btn-primary-color:              #fff !default;
+$btn-primary-bg:                 $brand-primary !default;
+$btn-primary-border:             darken($btn-primary-bg, 5%) !default;
+
+$btn-success-color:              #fff !default;
+$btn-success-bg:                 $brand-success !default;
+$btn-success-border:             darken($btn-success-bg, 5%) !default;
+
+$btn-info-color:                 #fff !default;
+$btn-info-bg:                    $brand-info !default;
+$btn-info-border:                darken($btn-info-bg, 5%) !default;
+
+$btn-warning-color:              #fff !default;
+$btn-warning-bg:                 $brand-warning !default;
+$btn-warning-border:             darken($btn-warning-bg, 5%) !default;
+
+$btn-danger-color:               #fff !default;
+$btn-danger-bg:                  $brand-danger !default;
+$btn-danger-border:              darken($btn-danger-bg, 5%) !default;
+
+$btn-link-disabled-color:        $gray-light !default;
+
+// Allows for customizing button radius independently from global border radius
+$btn-border-radius-base:         $border-radius-base !default;
+$btn-border-radius-large:        $border-radius-large !default;
+$btn-border-radius-small:        $border-radius-small !default;
+
+//== Dropdowns
+//
+//## Dropdown menu container and contents.
+
+//** Background for the dropdown menu.
+$dropdown-bg:                    #fff !default;
+//** Dropdown menu `border-color`.
+$dropdown-border:                rgba(0,0,0,.15) !default;
+//** Dropdown menu `border-color` **for IE8**.
+$dropdown-fallback-border:       #ccc !default;
+//** Divider color for between dropdown items.
+$dropdown-divider-bg:            #e5e5e5 !default;
+
+//** Dropdown link text color.
+$dropdown-link-color:            $gray-dark !default;
+//** Hover color for dropdown links.
+$dropdown-link-hover-color:      darken($gray-dark, 5%) !default;
+//** Hover background for dropdown links.
+$dropdown-link-hover-bg:         #f5f5f5 !default;
+
+//** Active dropdown menu item text color.
+$dropdown-link-active-color:     $component-active-color !default;
+//** Active dropdown menu item background color.
+$dropdown-link-active-bg:        $component-active-bg !default;
+
+//** Disabled dropdown menu item background color.
+$dropdown-link-disabled-color:   $gray-light !default;
+
+//** Text color for headers within dropdown menus.
+$dropdown-header-color:          $gray-light !default;
+
+//== Media queries breakpoints
+//
+//## Define the breakpoints at which your layout will change, adapting to different screen sizes.
+
+// Extra small screen / phone
+//** Deprecated `$screen-xs` as of v3.0.1
+$screen-xs:                  480px !default;
+//** Deprecated `$screen-xs-min` as of v3.2.0
+$screen-xs-min:              $screen-xs !default;
+//** Deprecated `$screen-phone` as of v3.0.1
+$screen-phone:               $screen-xs-min !default;
+
+// Small screen / tablet
+//** Deprecated `$screen-sm` as of v3.0.1
+$screen-sm:                  768px !default;
+$screen-sm-min:              $screen-sm !default;
+//** Deprecated `$screen-tablet` as of v3.0.1
+$screen-tablet:              $screen-sm-min !default;
+
+// Medium screen / desktop
+//** Deprecated `$screen-md` as of v3.0.1
+$screen-md:                  992px !default;
+$screen-md-min:              $screen-md !default;
+//** Deprecated `$screen-desktop` as of v3.0.1
+$screen-desktop:             $screen-md-min !default;
+
+// Large screen / wide desktop
+//** Deprecated `$screen-lg` as of v3.0.1
+$screen-lg:                  1200px !default;
+$screen-lg-min:              $screen-lg !default;
+//** Deprecated `$screen-lg-desktop` as of v3.0.1
+$screen-lg-desktop:          $screen-lg-min !default;
+
+// So media queries don't overlap when required, provide a maximum
+$screen-xs-max:              ($screen-sm-min - 1) !default;
+$screen-sm-max:              ($screen-md-min - 1) !default;
+$screen-md-max:              ($screen-lg-min - 1) !default;
+
+// Navbar collapse
+//** Point at which the navbar becomes uncollapsed.
+$grid-float-breakpoint:     $screen-sm-min !default;
+//** Point at which the navbar begins collapsing.
+$grid-float-breakpoint-max: ($grid-float-breakpoint - 1) !default;
+
+//** Disabled cursor for form controls and buttons.
+$cursor-disabled:                not-allowed !default;
+
+
+// Sonstiges
+$line-height-base:      18px;
+$line-height-computed:  $line-height-base;
+$font-size-base:        $fontTextSize;
+$font-size-large:       $fontTextSize;
+$font-size-small:       $fontTextSize;
+$link-color:            $colorText;
+$link-hover-color:      $colorText;
+$link-hover-decoration: $colorText;
+$zindex-dropdown:       20;        
