--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -41,7 +41,8 @@ $colorDefault:	    #003366;
 $colorStandardHellgrau:	    #e9edf2;  
     // FAU: colorlightest:
     // desaturate(lighten($colorZUV, 73%), 75%);
-$colorContentBorders:	    #dfe6ec;  
+$colorContentBorders:       #6152a3;
+    //$colorContentBorders:	    #dfe6ec;  
     // FAU: colorlight
     // desaturate(lighten($colorZUV, 69%), 75%);
 $colorContentRegions:	    #f5f7f9;
