--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -101,7 +101,7 @@
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid transparent;
   white-space: nowrap;
-  @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $btn-border-radius-base);
+  @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, 0px);
   //@include user-select(none);
 
   &,
@@ -1671,8 +1671,8 @@ input[type="button"] {
     padding: 0;
     //neu zugefügt
     background-color: $colorPrimary;
-    //margin-bottom: auto;
-
+    //margin-bottom: auto;    
+    
     h1 {
         //padding: 30px 0 10px 0;
         font: italic 28px $fontStackLight;
@@ -1694,7 +1694,7 @@ input[type="button"] {
     }
 
     img {
-        @include box-shadow(2px 2px 2px rgba(0,0,0,0.3));
+        //@include box-shadow(2px 2px 2px rgba(0,0,0,0.3));
         //@include box-shadow(0 1px 2px rgba(0,0,0,0.3));
         max-width: 100%;
 
@@ -1743,11 +1743,16 @@ input[type="button"] {
         padding: 0;
 
         p {
-            padding-left: 45px;
+            padding-left: 45px;            
+            wp-caption-text {
+                padding-left: 0px;
+            }
         }
+        
         ol, ul {
             padding-left: 36px;
             li {
+                @include triangle-list($fontTextSize,$colorText);
                 font-size: $fontTextSize;
                 letter-spacing: 0.1em;
                 padding: 4px 0 5px 4px;
@@ -1767,11 +1772,12 @@ input[type="button"] {
             }
         }
         .startdesc {
-            float: right;
+            //float: right;
             p {
                 padding: 15px 0 60px 0;
                 font-style: italic;
                 font-size: 18px;
+                text-align: center;
             }
 
         }
